polyphone (1.8) unstable; urgency=low

  * (new) light and dark color themes
  * (new) czech translation
  * (new) links to the online manual & forum
  * (new) tool to call an external editor for samples
  * (improvement) tools "remove whistling" and "brickwall filter" replaced by "filter frequencies" 
  * (improvement) the attenuation tool can now deal with global parameters and presets 
  * (improvement) using space or enter over a cell makes it editable
  * (improvement) ctrl-x can be used in the tables
  * (improvement) double-clicking on a division go to the corresponding sample or instrument
  * (improvement) logo changed
  * (fix) two alt-C hints were used in the close sf2 dialog
  * (fix) a progress dialog was displayed when opening the software
  * (fix) natural order in the tree and tables
  * (fix) behaviour of the "loop playback" cell in the tables

 -- Davy Triponney <davy.triponney@gmail.com>  Wed, 27 Oct 2016 20:51:55 +0100


polyphone (1.7) UNRELEASED; urgency=low

  * (new) convenient view to graphically edit key and velocity ranges
  * (new) overview pages showing a configuration summary of all samples, instruments or presets
  * (new) sf3 import / export
  * (new) serbian translation
  * (new) command line for conversions between sf2, sf3, sfz and sfArk
  * (improvement) simultaneous editing of multiple global divisions
  * (improvement) tools are allowed when several instruments or presets are selected in the tree
  * (improvement) pasting modulators is allowed for several divisions
  * (improvement) wheel event support in the sample graphics
  * (improvement) loop modes in the instrument table are displayed with graphical elements
  * (fix) the "left / right" attribute was lost in duplicated samples
  * (fix) minor graphical interface issues

 -- Davy Triponney <davy.triponney@gmail.com>  Wed, 27 Sep 2015 20:51:55 +0100


polyphone (1.6) UNRELEASED; urgency=low

  * full screen mode